refactor: 整理 Elasticsearch 实体枚举